--- a/Views/OperatorDetails.xaml
+++ b/Views/OperatorDetails.xaml
@@ -2,13 +2,245 @@
     x:Class="ArknightsToolkit.Views.OperatorDetails"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ArknightsToolkit.Views"
+    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:helper="using:ArknightsToolkit.Helper"
+    xmlns:local="using:ArknightsToolkit.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    xmlns:models="using:ArknightsToolkit.Models"
+    xmlns:viewmodels="using:ArknightsToolkit.ViewModels"
+    d:DataContext="{d:DesignInstance Type=viewmodels:OperatorDetailsViewModel}"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    mc:Ignorable="d">
+    <Page.Resources>
+        <helper:OperatorChildrenToOperatorImageConverter x:Key="OpChildrenToOperatorImageConverter" />
+        <helper:OperatorChildrenToClassImageConverter x:Key="OpChildrenToClassImageConverter" />
+        <helper:OperatorTypeToStringConverter x:Key="OpTypeToStringConverter" />
+        <RatingItemImageInfo x:Key="OperatorStar" Image="/Assets/ui-star.png" />
+        <Style x:Key="BaseTextBlockStyle" TargetType="TextBlock">
+            <Setter Property="FontFamily" Value="XamlAutoFontFamily" />
+            <Setter Property="FontWeight" Value="SemiBold" />
+            <Setter Property="FontSize" Value="14" />
+            <Setter Property="TextTrimming" Value="None" />
+            <Setter Property="TextWrapping" Value="Wrap" />
+            <Setter Property="LineStackingStrategy" Value="MaxHeight" />
+            <Setter Property="TextLineBounds" Value="Full" />
+        </Style>
+        <Style x:Key="CaptionTextBlockStyle" BasedOn="{StaticResource BaseTextBlockStyle}" TargetType="TextBlock">
+            <Setter Property="FontSize" Value="12" />
+            <Setter Property="FontWeight" Value="Normal" />
+        </Style>
+        <!--#region OperatorRatingStyle-->
+        <Style x:Key="OperatorRatingControlStyle" TargetType="RatingControl">
+            <Setter Property="Height" Value="32" />
+            <Setter Property="Foreground" Value="{ThemeResource RatingControlCaptionForeground}" />
+            <Setter Property="UseSystemFocusVisuals" Value="{StaticResource UseSystemFocusVisuals}" />
+            <Setter Property="FontFamily" Value="Segoe MDL2 Assets" />
+            <Setter Property="ItemInfo" Value="{StaticResource OperatorStar}" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="RatingControl">
+                        <Grid x:Name="LayoutRoot">
+                            <StackPanel Grid.Row="0" Margin="-20,-20,-20,-20" Orientation="Horizontal">
+                                <StackPanel
+                                    x:Name="RatingBackgroundStackPanel"
+                                    Margin="20,20,0,20"
+                                    Background="Transparent"
+                                    Orientation="Horizontal" />
+                                <TextBlock
+                                    x:Name="Caption"
+                                    Height="32"
+                                    Margin="4,9,20,0"
+                                    VerticalAlignment="Center"
+                                    AutomationProperties.AccessibilityView="Raw"
+                                    AutomationProperties.Name="RatingCaption"
+                                    IsHitTestVisible="False"
+                                    Style="{ThemeResource CaptionTextBlockStyle}"
+                                    Text="{TemplateBinding Caption}"
+                                    TextLineBounds="TrimToBaseline" />
+                            </StackPanel>
+                            <ContentPresenter x:Name="ForegroundContentPresenter" Grid.Row="0" IsHitTestVisible="False">
+                                <StackPanel Margin="-40,-40,-40,-40" Orientation="Horizontal">
+                                    <StackPanel
+                                        x:Name="RatingForegroundStackPanel"
+                                        Margin="40,40,40,40"
+                                        IsHitTestVisible="False"
+                                        Orientation="Horizontal" />
+                                </StackPanel>
+                            </ContentPresenter>
+                            <VisualStateManager.VisualStateGroups>
+                                <VisualStateGroup x:Name="CommonStates">
+                                    <VisualState x:Name="Disabled">
+                                        <VisualState.Setters>
+                                            <Setter Target="ForegroundContentPresenter.Foreground" Value="{ThemeResource RatingControlDisabledSelectedForeground}" />
+                                        </VisualState.Setters>
+                                    </VisualState>
+                                    <VisualState x:Name="Placeholder">
+                                        <VisualState.Setters>
+                                            <Setter Target="ForegroundContentPresenter.Foreground" Value="{ThemeResource RatingControlPlaceholderForeground}" />
+                                        </VisualState.Setters>
+                                    </VisualState>
+                                    <VisualState x:Name="PointerOverPlaceholder">
+                                        <VisualState.Setters>
+                                            <Setter Target="ForegroundContentPresenter.Foreground" Value="{ThemeResource RatingControlPointerOverPlaceholderForeground}" />
+                                        </VisualState.Setters>
+                                    </VisualState>
+                                    <VisualState x:Name="PointerOverUnselected">
+                                        <VisualState.Setters>
+                                            <Setter Target="ForegroundContentPresenter.Foreground" Value="{ThemeResource RatingControlPointerOverUnselectedForeground}" />
+                                        </VisualState.Setters>
+                                    </VisualState>
+                                    <VisualState x:Name="Set">
+                                        <VisualState.Setters>
+                                            <Setter Target="ForegroundContentPresenter.Foreground" Value="{ThemeResource RatingControlSelectedForeground}" />
+                                        </VisualState.Setters>
+                                    </VisualState>
+                                    <VisualState x:Name="PointerOverSet">
+                                        <VisualState.Setters>
+                                            <Setter Target="ForegroundContentPresenter.Foreground" Value="{ThemeResource RatingControlSelectedForeground}" />
+                                        </VisualState.Setters>
+                                    </VisualState>
+                                </VisualStateGroup>
+                            </VisualStateManager.VisualStateGroups>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <!--#endregion-->
+    </Page.Resources>
 
-    <Grid>
+    <Grid Width="Auto" Background="{ThemeResource SystemControlChromeMediumLowAcrylicWindowMediumBrush}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        
+        <StackPanel  Width="Auto" HorizontalAlignment="Left">
+            <controls:Expander
+                Margin="0,0,0,10"
+                VerticalAlignment="Top"
+                HorizontalContentAlignment="Stretch"
+                ExpandDirection="Right"
+                Header="档案">
+                <Grid Width="300">
+                    <TextBlock
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Text="This is the expanded content"
+                        TextWrapping="Wrap" />
+                </Grid>
+            </controls:Expander>
 
+            <controls:Expander
+                Margin="0,0,0,10"
+                VerticalAlignment="Top"
+                HorizontalContentAlignment="Stretch"
+                ExpandDirection="Right"
+                Header="语音">
+                <Grid Width="300">
+                    <TextBlock
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Text="This is the expanded content"
+                        TextWrapping="Wrap" />
+                </Grid>
+            </controls:Expander>
+
+            <controls:Expander
+                Margin="0,0,0,10"
+                VerticalAlignment="Top"
+                HorizontalContentAlignment="Stretch"
+                ExpandDirection="Right"
+                Header="干员密录">
+                <Grid Width="300">
+                    <TextBlock
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Text="This is the expanded content"
+                        TextWrapping="Wrap" />
+                </Grid>
+            </controls:Expander>
+        </StackPanel>
+        
+        <Grid x:Name="ContentGrid" Grid.Column="1" Margin="11,0,0,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+
+            <ScrollViewer
+                Grid.Row="0"
+                Height="505"
+                BorderBrush="Gray"
+                BorderThickness="2"
+                CornerRadius="4"
+                HorizontalScrollBarVisibility="Auto"
+                VerticalScrollBarVisibility="Auto"
+                ZoomMode="Enabled">
+                <Image
+                    x:Name="OperatorImage"
+                    Width="550"
+                    Height="500"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Source="{x:Bind ViewModel.CurrentOperator.Children, Mode=OneWay, Converter={StaticResource OpChildrenToOperatorImageConverter}}"
+                    Stretch="Uniform" />
+            </ScrollViewer>
+            <RatingControl
+                x:Name="OperatorStarRatingControl"
+                Grid.Row="1"
+                Margin="0,10,0,0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Center"
+                IsEnabled="False"
+                MaxRating="{x:Bind ViewModel.CurrentOperator.Star}"
+                Style="{StaticResource OperatorRatingControlStyle}"
+                Value="{x:Bind ViewModel.CurrentOperator.Star}" />
+            <StackPanel
+                x:Name="OperatorNameStackPanel"
+                Grid.Row="2"
+                HorizontalAlignment="Left"
+                Orientation="Horizontal">
+                <Border
+                    Width="65"
+                    Height="65"
+                    Margin="0,0,10,0"
+                    Padding="0"
+                    Background="{ThemeResource SystemControlChromeMediumLowAcrylicWindowMediumBrush}"
+                    BorderBrush="Gray"
+                    BorderThickness="2"
+                    CornerRadius="2">
+                    <Image
+                        Width="50"
+                        Height="50"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Source="{x:Bind ViewModel.CurrentOperator.Children, Mode=OneWay, Converter={StaticResource OpChildrenToClassImageConverter}}" />
+                </Border>
+                <TextBlock
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    FontSize="30"
+                    Style="{StaticResource BaseTextBlockStyle}"
+                    Text="{x:Bind ViewModel.CurrentOperator.Name}" />
+
+                <ComboBox
+                    x:Name="OperatorChildrenComboBox"
+                    Width="Auto"
+                    Margin="10,0,0,0"
+                    VerticalAlignment="Center"
+                    ItemsSource="{x:Bind ViewModel.CurrentOperator.Children.ChildList}"
+                    SelectedIndex="0"
+                    SelectionChanged="ComboBox_SelectionChanged">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate x:DataType="models:OperatorInfo">
+                            <TextBlock Text="{x:Bind Type, Converter={StaticResource OpTypeToStringConverter}}" />
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+            </StackPanel>
+        </Grid>
     </Grid>
 </Page>
