将一些资源移动到了应用本体,更新了主页面布局

--- a/Views/OperatorDetails.xaml
+++ b/Views/OperatorDetails.xaml
@@ -19,7 +19,7 @@
         <helper:OperatorChildrenToCVConverter x:Key="OpChildrenToCVConverter" />
         <helper:OperatorProfileTypeToStringConverter x:Key="OpProfileTypeToStringConverter" />
         <helper:OperatorChildrenToIllustratorConverter x:Key="OpChildrenToIllustratorConverter" />
-        <RatingItemImageInfo x:Key="OperatorStar" Image="/Assets/ui-star.png" />
+        <RatingItemImageInfo x:Key="OperatorStar" Image="/Assets/UI/ui_star.png" />
         <Style x:Key="BaseTextBlockStyle" TargetType="TextBlock">
             <Setter Property="FontFamily" Value="XamlAutoFontFamily" />
             <Setter Property="FontWeight" Value="SemiBold" />
@@ -29,7 +29,10 @@
             <Setter Property="LineStackingStrategy" Value="MaxHeight" />
             <Setter Property="TextLineBounds" Value="Full" />
         </Style>
-        <Style x:Key="CaptionTextBlockStyle" BasedOn="{StaticResource BaseTextBlockStyle}" TargetType="TextBlock">
+        <Style
+            x:Key="CaptionTextBlockStyle"
+            BasedOn="{StaticResource BaseTextBlockStyle}"
+            TargetType="TextBlock">
             <Setter Property="FontSize" Value="12" />
             <Setter Property="FontWeight" Value="Normal" />
         </Style>
@@ -44,7 +47,10 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="RatingControl">
                         <Grid x:Name="LayoutRoot">
-                            <StackPanel Grid.Row="0" Margin="-20,-20,-20,-20" Orientation="Horizontal">
+                            <StackPanel
+                                Grid.Row="0"
+                                Margin="-20,-20,-20,-20"
+                                Orientation="Horizontal">
                                 <StackPanel
                                     x:Name="RatingBackgroundStackPanel"
                                     Margin="20,20,0,20"
@@ -62,7 +68,10 @@
                                     Text="{TemplateBinding Caption}"
                                     TextLineBounds="TrimToBaseline" />
                             </StackPanel>
-                            <ContentPresenter x:Name="ForegroundContentPresenter" Grid.Row="0" IsHitTestVisible="False">
+                            <ContentPresenter
+                                x:Name="ForegroundContentPresenter"
+                                Grid.Row="0"
+                                IsHitTestVisible="False">
                                 <StackPanel Margin="-40,-40,-40,-40" Orientation="Horizontal">
                                     <StackPanel
                                         x:Name="RatingForegroundStackPanel"
@@ -113,20 +122,19 @@
         <!--#endregion-->
     </Page.Resources>
 
-    <ScrollViewer x:Name="mainScrollViewer" Width="Auto" Background="{ThemeResource SystemControlChromeMediumLowAcrylicWindowMediumBrush}">
+    <ScrollViewer
+        x:Name="mainScrollViewer"
+        Width="Auto"
+        Background="{ThemeResource SystemControlChromeMediumLowAcrylicWindowMediumBrush}">
         <Grid Width="Auto" Background="{ThemeResource SystemControlChromeMediumLowAcrylicWindowMediumBrush}">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
             <ScrollViewer
                 x:Name="expanderScrollViewer"
+                Grid.Row="1"
                 Width="Auto"
                 Margin="11,0,0,0"
                 VerticalScrollBarVisibility="Auto">
@@ -143,7 +151,6 @@
                     <muxc:Expander Padding="0" Header="档案">
                         <ListView
                             x:Name="profilesListView"
-                            MaxWidth="500"
                             IsItemClickEnabled="False"
                             ItemsSource="{x:Bind ViewModel.CurrentOperator.Profiles.ProfilesList}"
                             SelectionMode="None">
@@ -155,11 +162,14 @@
                                             FontSize="30"
                                             FontWeight="Bold"
                                             Text="{x:Bind Type, Converter={StaticResource OpProfileTypeToStringConverter}}" />
-                                        <TextBlock
+                                        <RichTextBlock
                                             Margin="0,0,0,10"
                                             FontWeight="SemiLight"
-                                            Text="{x:Bind Profile}"
-                                            TextWrapping="WrapWholeWords" />
+                                            TextWrapping="Wrap">
+                                            <Paragraph>
+                                                <Run Text="{x:Bind Profile}" />
+                                            </Paragraph>
+                                        </RichTextBlock>
                                     </StackPanel>
                                 </DataTemplate>
                             </ListView.ItemTemplate>
@@ -196,7 +206,10 @@
                 </StackPanel>
             </ScrollViewer>
 
-            <Grid x:Name="ContentGrid" Grid.Column="1" Margin="11,5,11,0">
+            <Grid
+                x:Name="ContentGrid"
+                Grid.Row="0"
+                Margin="11,5,11,0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
@@ -215,7 +228,7 @@
                     ZoomMode="Enabled">
                     <Image
                         x:Name="OperatorImage"
-                        Width="550"
+                        Width="500"
                         Height="500"
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
@@ -223,103 +236,99 @@
                         Stretch="Uniform" />
                 </ScrollViewer>
 
-                <RatingControl
-                    x:Name="OperatorStarRatingControl"
+                <StackPanel
                     Grid.Row="1"
                     Margin="0,10,0,0"
                     HorizontalAlignment="Left"
-                    VerticalAlignment="Center"
-                    IsEnabled="False"
-                    MaxRating="{x:Bind ViewModel.CurrentOperator.Star}"
-                    Style="{StaticResource OperatorRatingControlStyle}"
-                    Value="{x:Bind ViewModel.CurrentOperator.Star}" />
+                    VerticalAlignment="Center">
+                    <RatingControl
+                        x:Name="OperatorStarRatingControl"
+                        HorizontalAlignment="Left"
+                        IsEnabled="False"
+                        MaxRating="{x:Bind ViewModel.CurrentOperator.Star}"
+                        Style="{StaticResource OperatorRatingControlStyle}"
+                        Value="{x:Bind ViewModel.CurrentOperator.Star}" />
 
-                <StackPanel
-                    x:Name="OperatorNameStackPanel"
-                    Grid.Row="2"
-                    HorizontalAlignment="Left"
-                    Orientation="Horizontal">
-                    <Border
-                        Width="65"
-                        Height="65"
-                        Margin="0,0,10,0"
-                        Padding="0"
-                        Background="{ThemeResource SystemControlChromeMediumLowAcrylicWindowMediumBrush}"
-                        BorderBrush="Gray"
-                        BorderThickness="2"
-                        CornerRadius="2">
-                        <Image
-                            Width="50"
-                            Height="50"
+                    <StackPanel
+                        x:Name="OperatorNameStackPanel"
+                        HorizontalAlignment="Left"
+                        Orientation="Horizontal">
+                        <Border
+                            Width="65"
+                            Height="65"
+                            Margin="0,0,10,0"
+                            Padding="0"
+                            Background="{ThemeResource SystemControlChromeMediumLowAcrylicWindowMediumBrush}"
+                            BorderBrush="Gray"
+                            BorderThickness="2"
+                            CornerRadius="2">
+                            <Image
+                                Width="50"
+                                Height="50"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                Source="{x:Bind ViewModel.CurrentOperator.Children, Mode=OneWay, Converter={StaticResource OpChildrenToClassImageConverter}}" />
+                        </Border>
+
+                        <TextBlock
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center"
-                            Source="{x:Bind ViewModel.CurrentOperator.Children, Mode=OneWay, Converter={StaticResource OpChildrenToClassImageConverter}}" />
-                    </Border>
+                            FontSize="30"
+                            Style="{StaticResource BaseTextBlockStyle}"
+                            Text="{x:Bind ViewModel.CurrentOperator.Name}" />
 
-                    <TextBlock
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        FontSize="30"
-                        Style="{StaticResource BaseTextBlockStyle}"
-                        Text="{x:Bind ViewModel.CurrentOperator.Name}" />
+                        <ComboBox
+                            x:Name="OperatorChildrenComboBox"
+                            Width="Auto"
+                            Margin="10,0,0,0"
+                            VerticalAlignment="Center"
+                            ItemsSource="{x:Bind ViewModel.CurrentOperator.Children.ChildList}"
+                            SelectedIndex="0"
+                            SelectionChanged="ComboBox_SelectionChanged">
+                            <ComboBox.ItemTemplate>
+                                <DataTemplate x:DataType="models:OperatorInfo">
+                                    <TextBlock Text="{x:Bind Type, Converter={StaticResource OpTypeToStringConverter}}" />
+                                </DataTemplate>
+                            </ComboBox.ItemTemplate>
+                        </ComboBox>
 
-                    <ComboBox
-                        x:Name="OperatorChildrenComboBox"
-                        Width="Auto"
-                        Margin="10,0,0,0"
-                        VerticalAlignment="Center"
-                        ItemsSource="{x:Bind ViewModel.CurrentOperator.Children.ChildList}"
-                        SelectedIndex="0"
-                        SelectionChanged="ComboBox_SelectionChanged">
-                        <ComboBox.ItemTemplate>
-                            <DataTemplate x:DataType="models:OperatorInfo">
-                                <TextBlock Text="{x:Bind Type, Converter={StaticResource OpTypeToStringConverter}}" />
-                            </DataTemplate>
-                        </ComboBox.ItemTemplate>
-                    </ComboBox>
+                        <Grid
+                            Margin="5,0,0,0"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center">
+                            <Grid.RowDefinitions>
+                                <RowDefinition />
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition />
+                            </Grid.ColumnDefinitions>
+                            <Grid.Resources>
+                                <Style BasedOn="{StaticResource BaseTextBlockStyle}" TargetType="TextBlock" />
+                            </Grid.Resources>
 
-                    <Grid Margin="5,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center">
-                        <Grid.RowDefinitions>
-                            <RowDefinition />
-                            <RowDefinition />
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition />
-                            <ColumnDefinition />
-                        </Grid.ColumnDefinitions>
-                        <Grid.Resources>
-                            <Style BasedOn="{StaticResource BaseTextBlockStyle}" TargetType="TextBlock" />
-                        </Grid.Resources>
-
-                        <TextBlock Grid.Row="0" Grid.Column="0" Text="画师:" />
-                        <TextBlock Grid.Row="0" Grid.Column="1" Text="{x:Bind ViewModel.CurrentOperator.Children, Converter={StaticResource OpChildrenToIllustratorConverter}}" />
-                        <TextBlock Grid.Row="1" Grid.Column="0" Text="配音:" />
-                        <TextBlock Grid.Row="1" Grid.Column="1" Text="{x:Bind ViewModel.CurrentOperator.Children, Converter={StaticResource OpChildrenToCVConverter}}" />
-                    </Grid>
+                            <TextBlock
+                                Grid.Row="0"
+                                Grid.Column="0"
+                                Text="画师:" />
+                            <TextBlock
+                                Grid.Row="0"
+                                Grid.Column="1"
+                                Text="{x:Bind ViewModel.CurrentOperator.Children, Converter={StaticResource OpChildrenToIllustratorConverter}}" />
+                            <TextBlock
+                                Grid.Row="1"
+                                Grid.Column="0"
+                                Text="配音:" />
+                            <TextBlock
+                                Grid.Row="1"
+                                Grid.Column="1"
+                                Text="{x:Bind ViewModel.CurrentOperator.Children, Converter={StaticResource OpChildrenToCVConverter}}" />
+                        </Grid>
+                    </StackPanel>
                 </StackPanel>
+
             </Grid>
         </Grid>
-
-        <VisualStateManager.VisualStateGroups>
-            <VisualStateGroup x:Name="VisualStateGroup">
-                <VisualState x:Name="Default">
-                    <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="1000" />
-                    </VisualState.StateTriggers>
-                </VisualState>
-                <VisualState x:Name="Narrow">
-                    <VisualState.Setters>
-                        <Setter Target="ContentGrid.(Grid.ColumnSpan)" Value="2" />
-                        <Setter Target="ContentGrid.(Grid.Row)" Value="0" />
-                        <Setter Target="expanderScrollViewer.(Grid.ColumnSpan)" Value="2" />
-                        <Setter Target="expanderScrollViewer.(Grid.Row)" Value="1" />
-                        <Setter Target="profilesListView.MaxWidth" Value="950" />
-                    </VisualState.Setters>
-                    <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="0" />
-                    </VisualState.StateTriggers>
-                </VisualState>
-            </VisualStateGroup>
-        </VisualStateManager.VisualStateGroups>
     </ScrollViewer>
 </Page>
