--- a/Views/FrontPage.xaml
+++ b/Views/FrontPage.xaml
@@ -2,6 +2,7 @@
     x:Class="ArknightsToolkit.Views.FrontPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:ArknightsToolkit.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -10,30 +11,138 @@
     mc:Ignorable="d">
     <Page.Resources>
         <Style BasedOn="{StaticResource ButtonRevealStyle}" TargetType="Button">
-            <Setter Property="FontSize" Value="16" />
-            <Setter Property="Height" Value="150" />
-            <Setter Property="Width" Value="150" />
+            <Setter Property="FontSize" Value="14" />
+            <Setter Property="Height" Value="110" />
+            <Setter Property="Width" Value="110" />
             <Setter Property="CornerRadius" Value="2" />
             <Setter Property="Margin" Value="5" />
         </Style>
         <Style TargetType="FontIcon">
-            <Setter Property="FontSize" Value="90" />
+            <Setter Property="FontSize" Value="40" />
             <Setter Property="Margin" Value="0,0,0,10" />
         </Style>
     </Page.Resources>
 
     <Grid Background="{ThemeResource SystemControlChromeMediumLowAcrylicWindowMediumBrush}">
-        <StackPanel Margin="11,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <TextBlock Style="{StaticResource HeaderTextBlockStyle}" Text="欢迎!" />
-            <TextBlock Style="{StaticResource SubheaderTextBlockStyle}" Text="您想进行什么操作?" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="11" />
+            <!--  Content Today (Col 1)  -->
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="0.5*" />
+            <!--  Content New (Col 3)  -->
+            <ColumnDefinition Width="2.5*" />
+            <ColumnDefinition Width="0.5*" />
+            <!--  Content Function (Col 5)  -->
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="0.2*" />
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+        </Grid.RowDefinitions>
+
+        <TextBlock
+            Grid.Row="0"
+            Grid.Column="1"
+            FontSize="24"
+            Style="{StaticResource SubheaderTextBlockStyle}"
+            Text="终端" />
+
+        <StackPanel
+            x:Name="todayStackPanel"
+            Grid.Row="1"
+            Grid.Column="1"
+            Margin="0,0,0,0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top">
+            <controls:DropShadowPanel Margin="0,0,0,5" OffsetY="2">
+                <StackPanel
+                    Width="150"
+                    Padding="5"
+                    HorizontalAlignment="Center"
+                    Background="#313131"
+                    BorderThickness="1">
+                    <TextBlock
+                        HorizontalAlignment="Center"
+                        FontSize="10"
+                        FontWeight="Bold"
+                        Foreground="LightGray"
+                        Text="TODAY" />
+                </StackPanel>
+            </controls:DropShadowPanel>
+
+            <ListView>
+                <ListViewItem HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <TextBlock
+                        HorizontalAlignment="Center"
+                        FontWeight="Bold"
+                        Foreground="Gray"
+                        Text="NO INFO" />
+                </ListViewItem>
+                <ListViewItem HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <TextBlock
+                        FontWeight="Bold"
+                        Foreground="Gray"
+                        Text="COMING SOON" />
+                </ListViewItem>
+            </ListView>
         </StackPanel>
 
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Orientation="Horizontal">
+        <StackPanel
+            x:Name="newStackPanel"
+            Grid.Row="1"
+            Grid.Column="3"
+            Margin="0,0,0,0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Top">
+            <controls:DropShadowPanel OffsetY="2">
+                <StackPanel
+                    Width="150"
+                    Padding="5"
+                    HorizontalAlignment="Center"
+                    Background="#313131"
+                    BorderThickness="1">
+                    <TextBlock
+                        HorizontalAlignment="Center"
+                        FontSize="10"
+                        FontWeight="Bold"
+                        Foreground="LightGray"
+                        Text="NEW" />
+                </StackPanel>
+            </controls:DropShadowPanel>
+
+            <ListView>
+                <ListViewItem HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <TextBlock
+                        FontWeight="Bold"
+                        Foreground="Gray"
+                        Text="NO INFO" />
+                </ListViewItem>
+                <ListViewItem HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <TextBlock
+                        FontWeight="Bold"
+                        Foreground="Gray"
+                        Text="COMING SOON" />
+                </ListViewItem>
+            </ListView>
+        </StackPanel>
+
+        <StackPanel
+            x:Name="functionStackPanel"
+            Grid.Row="1"
+            Grid.Column="5"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center">
             <Button Command="{x:Bind ViewModel.NavigateToStoryPageCommand}">
                 <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
                     <!--<FontIcon FontFamily="{ThemeResource SymbolThemeFontFamily}" Glyph="&#xE12F;" />-->
-                    <Image Source="{x:Bind ViewModel.TapeImage,Mode=OneWay}" Height="90" Width="90"/>
-                    <TextBlock Text="查看游戏剧情" Margin="0,10,0,0"/>
+                    <Image
+                        Width="60"
+                        Height="60"
+                        Source="/Assets/UI/ui_tape.png" />
+                    <TextBlock Margin="0,10,0,0" Text="查看游戏剧情" />
                 </StackPanel>
             </Button>
             <Button Command="{x:Bind ViewModel.NavigateToOperatorsCommand}">
@@ -43,5 +152,43 @@
                 </StackPanel>
             </Button>
         </StackPanel>
+        
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup x:Name="VisualStateGroup">
+                <VisualState x:Name="Default">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="800" />
+                    </VisualState.StateTriggers>
+                </VisualState>
+                <VisualState x:Name="Narrow">
+                    <VisualState.Setters>
+                        <Setter Target="functionStackPanel.(Grid.ColumnSpan)" Value="7" />
+                        <Setter Target="functionStackPanel.(Grid.Column)" Value="0" />
+                        <Setter Target="functionStackPanel.(StackPanel.Orientation)" Value="Horizontal" />
+                        <Setter Target="functionStackPanel.(Grid.Row)" Value="1" />
+                        <Setter Target="functionStackPanel.(FrameworkElement.Margin)">
+                            <Setter.Value>
+                                <Thickness>0,0,0,5</Thickness>
+                            </Setter.Value>
+                        </Setter>
+                        <Setter Target="todayStackPanel.(Grid.Row)" Value="2" />
+                        <Setter Target="newStackPanel.(Grid.Row)" Value="2" />
+                        <Setter Target="newStackPanel.(Grid.ColumnSpan)" Value="6" />
+                        <Setter Target="newStackPanel.(FrameworkElement.HorizontalAlignment)" Value="Right" />
+                        <Setter Target="todayStackPanel.(Grid.ColumnSpan)" Value="7" />
+                        <Setter Target="todayStackPanel.(FrameworkElement.HorizontalAlignment)" Value="Left" />
+                        <Setter Target="newStackPanel.(Grid.Column)" Value="3" />
+                        <Setter Target="newStackPanel.(FrameworkElement.Margin)">
+                            <Setter.Value>
+                                <Thickness>0,0,11,0</Thickness>
+                            </Setter.Value>
+                        </Setter>
+                    </VisualState.Setters>
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="0" />
+                    </VisualState.StateTriggers>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
     </Grid>
 </Page>
