--- a/Views/FrontPage.xaml
+++ b/Views/FrontPage.xaml
@@ -133,21 +133,22 @@
             x:Name="functionStackPanel"
             Grid.Row="1"
             Grid.Column="5"
+            Grid.ColumnSpan="2"
             HorizontalAlignment="Center"
             VerticalAlignment="Center">
-            <Button Command="{x:Bind ViewModel.NavigateToStoryPageCommand}">
+            <Button Height="150" Width="150" Command="{x:Bind ViewModel.NavigateToStoryPageCommand}">
                 <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
                     <!--<FontIcon FontFamily="{ThemeResource SymbolThemeFontFamily}" Glyph="&#xE12F;" />-->
                     <Image
-                        Width="60"
-                        Height="60"
+                        Width="70"
+                        Height="70"
                         Source="/Assets/UI/ui_tape.png" />
                     <TextBlock Margin="0,10,0,0" Text="查看游戏剧情" />
                 </StackPanel>
             </Button>
-            <Button Command="{x:Bind ViewModel.NavigateToOperatorsCommand}">
+            <Button Height="150" Width="150" Command="{x:Bind ViewModel.NavigateToOperatorsCommand}">
                 <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-                    <FontIcon FontFamily="{ThemeResource SymbolThemeFontFamily}" Glyph="&#xE13D;" />
+                    <FontIcon FontSize="70" FontFamily="{ThemeResource SymbolThemeFontFamily}" Glyph="&#xE13D;" />
                     <TextBlock Text="查看干员图鉴" />
                 </StackPanel>
             </Button>
